# assaytrace-core

./: .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
.pytest_cache/: .gitignore
assaytrace/: __init__.py  _policy_demo.py  labels.py  operational.py  portfolio.py
assaytrace/approval/: __init__.py  matcher.py  models.py
assaytrace/claims_impact/: __init__.py  mapper.py  models.py  rules.py
assaytrace/cli/: __init__.py  main.py
assaytrace/decision/: __init__.py  engine.py  init.py  models.py  no_revalidation.py  rules.py
assaytrace/diff/: __init__.py  detector.py  models.py  rules.py
assaytrace/evidence/: __init__.py  benchmark.py  models.py  parsers.py
assaytrace/impact/: __init__.py  graph.py  models.py  rules.py
assaytrace/ingestion/: __init__.py  adapters.py  base.py  models.py  registry.py
assaytrace/io/: __init__.py  loader.py
assaytrace/models/: __init__.py  assay.py  claims.py  common.py  enums.py  manifest.py  pipeline.py  qc.py
assaytrace/policy/: __init__.py  compare.py  loader.py  models.py
assaytrace/regression/: gate.py  (+3 more)
examples/: build.py  build_germline.py  change_demo.py  claim_impact_demo.py  demo.py  ingestion_example.py  manifest.json  manifest.yaml
tests/: conftest.py  test_benchmark.py  test_binder.py  test_cli.py  test_diff.py  test_evidence.py  test_impact.py  test_io.py  test_manifest.py  test_no_revalidation.py  test_pdf_export.py  test_regression.py  test_regression_benchmark.py  test_reportable.py  test_reportable_classification.py  test_revalidation.py  test_validators.py  test_web.py
(+32 files in other folders)
